# TomodachiLTDModMenu

./: Cargo.toml  README.md  hash_to_id.py  out_2.txt
ghidra_outputs/: out_2.txt  screen_hashes_output.txt  sizes.txt  sorted_vtables.txt
scripts/: hash_checker.py
src/: eui.rs  fsm_ext.rs  lib.rs  mod_menu.rs  patcher.rs  save_file.rs  ui_framework.rs
src/eui/: animator.rs  control.rs  layout_ex.rs  mod.rs  screen_manager.rs
src/save/: mod.rs  player.rs
src/sead/: mod.rs
src/sead/container/: mod.rs  sead_buffer.rs  sead_free_list.rs  sead_list_impl.rs  sead_offset_list.rs  sead_ptr_array.rs  sead_t_list.rs  sead_tree_map.rs
src/sead/heap/: heap.rs  mod.rs  sead_disposer.rs
src/sead/prim/: mod.rs  sead_namable.rs  sead_safe_string.rs
src/sead/thread/: mod.rs  sead_critical_section.rs
