[package]
name = "tomodachi-mod-menu"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "010051F0207B2000"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
skyline = "0.6.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"
lto = true
